[package]
name = "squirreldb-sdk"
version = "0.3.0"
edition = "2021"
description = "Rust client SDK for SquirrelDB"
license = "MIT"
repository = "https://github.com/squirreldb/squirreldb"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
